# cmake-pybind11

./: MANIFEST.in  PEP621_MIGRATION.md  README.md  build_wheel.py  pyproject.toml  setup.py  validate_pep621.py
cmake/: python.cmake
